fix wheel icon and fullpage-wrapper on IE #534

--- a/web/themes/quartiers_solidaires/assets/components/molecules/nav/nav.scss
+++ b/web/themes/quartiers_solidaires/assets/components/molecules/nav/nav.scss
@@ -9,8 +9,6 @@
   position: relative;
   z-index: 1;
   display: inline-flex;
-  justify-content: center;
-  align-items: center;
   width: $navbar-icon-size;
   height: $navbar-icon-size;
   min-width: initial;
